http-url-routing/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: 
  name: sample-web-app # can be any name, no connection with any other name
spec:
  hosts:  # the service name that we are applying rule to (incoming host)
    - "*"
  gateways:
    - ingress-gateway-configuration
  http:
  - match:
    - uri: # IF
        prefix: "/experimental"
    route:
    - destination:
        host: sample-web-app-service # target service name, can be any svc
        subset: risky-group
  - route:
    - destination:
        host: sample-web-app-service # target service name, can be any svc
        subset: safe-group
